--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver  
-url=jdbc:mysql://localhost:3306/test  
+url=jdbc:mysql://47.52.78.51:3306/test  
 username=root  
 password=122f4a88  
 initialSize=0  
