--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://fc360.cc:3306/test
+url=jdbc:mysql://localhost:3306/ssc
 username=root
-password=122f4a88
+password=
 initialSize=0
 maxActive=20
 maxIdle=20
