--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/ssc
+url=jdbc:mysql://47.52.78.51:3306/ssc
 username=root
-password=
+password=122f4a88
 initialSize=0
 maxActive=20
 maxIdle=20
