--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,13 @@
       <artifactId>httpmime</artifactId>
       <version>4.5</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.41</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>bcgame</finalName>
