--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,12 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.41</version>
     </dependency>
-
+    <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.10.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>bcgame</finalName>
