--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,16 @@
       <artifactId>jsoup</artifactId>
       <version>1.10.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.jdom</groupId>
+      <artifactId>jdom</artifactId>
+      <version>2.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.5</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>bcgame</finalName>
